# 2014-11-mds

./: .gitignore  README.md
mds/: 2014-08-25_outils-de-suivi.txt  gestion-projet.txt  mds2sep.txt  outils-de-suivi.txt  sections.txt  soucis.txt  vue-d-ensemble.txt
mds/notebook/: README  git.ipynb  tracker.ipynb
tetris/: CMakeLists.txt  tetris.c
tetris/clean/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  grid.c  grid.h  point.c  point.h  rgb_color.h  tetris.c  tetris.h  tetrominos.h  window.c  window.h
tetris/clean/test/: CMakeLists.txt  test_tetris.c
tetris/clean/test/KWstyle/: FilesToCheck.txt  README  Tetris.kws.xml
tetris/doc/: coding_rules.txt
tetris/orig/: CMakeCache.txt  Makefile  cmake_install.cmake  tetris  tetris.c
tetris/test/KWstyle/: FilesToCheck.txt  Tetris.kws.xml  run_kwstype.sh
training/: PROD.txt  PROJ.txt  VERS.txt  overview.txt
training/notebook/: build.ipynb  project-management.ipynb  software-development-tools.ipynb  tracker.ipynb
training/notebook/conv/: coding-style.ipynb
training/notebook/project/: project-management.ipynb
training/notebook/tracker/: tracker.ipynb
training/notebook/tutorials/: 1-GitHub_CMake.ipynb
training/notebook/vers/: git.ipynb
